syntax = "proto3";

option go_package = "berty.tech/go/internal/group";

message SecretEntryEnvelope {
  bytes receiver_id = 1; // We need to define that
  bytes encrypted_payload = 2;
}

message DeviceSecret {
  bytes group_device_pub_key = 1;
  bytes derivation_state = 2;
  uint64 counter = 3;
  bytes real_account_binder = 4;
}

message SecretEntryPayload {
  bytes group_account_pub_key = 1;
  repeated DeviceSecret secrets = 2;
}
